Modified Email field

--- a/frontend/LOGIN/styles/superLogin.css
+++ b/frontend/LOGIN/styles/superLogin.css
@@ -209,10 +209,24 @@ html, body {
     width: 100%;
     padding: 12px;
     margin-top: 2%;
-    border: 1px solid #F5F5F5;
+    border: 1.6px solid #F5F5F5;
     border-radius: 4px;
     color: #848484;
     font-family: Nunito San;
+    /* background-color: #a04ed0; */
+    
+  }
+
+
+  .email{
+  width: 100%;
+  border: none; /* Removes the default border */
+  outline: none; /* Prevents outline on focus */
+  border-radius: 4px;
+  font-size: 14px;
+  color: #848484;
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: transparent; /* Optional: keep background transparent */
     /* background-color: #a04ed0; */
     
   }
@@ -233,6 +247,7 @@ html, body {
     border: 1px solid #F5F5F5;
     margin-top: 2%;
     border-radius: 4px;
+    font-size: 14px;
     color: #848484;
     font-family: Nunito San;
     /* background-color: #db1887; */
