--- a/frontend/LOGIN/styles/login.css
+++ b/frontend/LOGIN/styles/login.css
@@ -2,54 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   -webkit-user-drag: none;
+    user-select: none;
 }
-
-
-@font-face {
-    font-family: Satoshi-Bold;
-    /* src: url(../atmsFont/Satoshi/Satoshi-Bold.woff); */
-    /* font-weight: bold; */
-    /* src: url(../atmsFont/Satoshi/Satoshi-Bold.woff); */
-    src: url(../FONTS/atmsFont/Satoshi/Satoshi-Bold.woff);
-  }
-
-@font-face {
-  font-family: Satoshi-Medium;
-  src: url(../FONTS/atmsFont/Satoshi/Satoshi-Medium.woff);
-  /* font-weight: bold; */
-}
-
-@font-face {
-    font-family: Satoshi-Regular;
-    src: url(../FONTS/atmsFont/Satoshi/Satoshi-Regular.woff);
-    /* font-weight: bold; */
-  }
-
-@font-face {
-    font-family: BalsamiqSans-Bold;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-Bold.ttf);
-    /* font-weight: 100; */
-  }
-
-@font-face {
-    font-family: BalsamiqSans-BoldItalic;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-BoldItalic.ttf);
-    /* font-weight: 400; */
-  }
-
-
-@font-face {
-    font-family: BalsamiqSans-Italic;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-Italic.ttf);
-    /* font-weight: bold; */
-  }
-
-
-@font-face {
-    font-family: BalsamiqSans-Regular;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-Regular.ttf);
-    /* font-weight: bold; */
-  }
 
 @font-face {
     font-family: Nunito Sans;
@@ -71,10 +26,6 @@ html, body {
 
 }
 
-* {
-  -webkit-user-drag: none;
-  user-select: none;
-}
 
 .mainNav {
     height: 15vh;
@@ -171,10 +122,20 @@ html, body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 8vh 4vw 12vh 4vw;
+    padding: 6vh 4vw 12vh 4vw;
     background-color: #ffffff;
+    /* border: 1px solid red; */
     
   }
+  .logHeader{
+    height: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 2%;
+  }
+
+
 /* WELCOME BACK *//* WELCOME BACK *//* WELCOME BACK *//* WELCOME BACK */
   .lHead{
     height: 40%;
@@ -182,6 +143,8 @@ html, body {
     text-align: center;
     font-size: 32px;
     font-family: Nunito San;    
+        /* border: 1px solid red; */
+
   }
 
   /* ENTER YOUR EMAIL AND PASSWORD TO LOGIN *//* ENTER YOUR EMAIL AND PASSWORD TO LOGIN *//* ENTER YOUR EMAIL AND PASSWORD TO LOGIN */
@@ -190,16 +153,26 @@ html, body {
     text-align: center;
     font-size: 20px;
     color: #848484;
-    font-family: Nunito San;    
+    font-family: Nunito San;
+    margin-top: 2%;    
+        /* border: 1px solid red; */
+
   }
 
 
+  .logbody{
+    height: 75%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+  }
 
 
   /* THIS CODE IS FOR THE EMAIL SECTION *//* THIS CODE IS FOR THE EMAIL SECTION *//* THIS CODE IS FOR THE EMAIL SECTION *//* THIS CODE IS FOR THE EMAIL SECTION */
   .eText{
     justify-self: center;
-    margin-top: 8%;
+    margin-top: 4%;
     font-size: 24px;
     font-family: Nunito San;    
   }
