--- a/frontend/SUPERVISOR VIEW/styles/homeListView.css
+++ b/frontend/SUPERVISOR VIEW/styles/homeListView.css
@@ -2,54 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   -webkit-user-drag: none;
+    user-select: none;
 }
-
-
-@font-face {
-    font-family: Satoshi-Bold;
-    /* src: url(../atmsFont/Satoshi/Satoshi-Bold.woff); */
-    /* font-weight: bold; */
-    /* src: url(../atmsFont/Satoshi/Satoshi-Bold.woff); */
-    src: url(../FONTS/atmsFont/Satoshi/Satoshi-Bold.woff);
-  }
-
-@font-face {
-  font-family: Satoshi-Medium;
-  src: url(../FONTS/atmsFont/Satoshi/Satoshi-Medium.woff);
-  /* font-weight: bold; */
-}
-
-@font-face {
-    font-family: Satoshi-Regular;
-    src: url(../FONTS/atmsFont/Satoshi/Satoshi-Regular.woff);
-    /* font-weight: bold; */
-  }
-
-@font-face {
-    font-family: BalsamiqSans-Bold;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-Bold.ttf);
-    /* font-weight: 100; */
-  }
-
-@font-face {
-    font-family: BalsamiqSans-BoldItalic;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-BoldItalic.ttf);
-    /* font-weight: 400; */
-  }
-
-
-@font-face {
-    font-family: BalsamiqSans-Italic;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-Italic.ttf);
-    /* font-weight: bold; */
-  }
-
-
-@font-face {
-    font-family: BalsamiqSans-Regular;
-    src: url(../atmsFont/Balsamiq_Sans/BalsamiqSans-Regular.ttf);
-    /* font-weight: bold; */
-  }
 
 @font-face {
     font-family: Nunito Sans;
@@ -71,28 +26,26 @@ html, body {
 
 }
 
-* {
-  -webkit-user-drag: none;
-  user-select: none;
-}
+
 
 .mainNav {
-    height: 15vh;
+    height: 10%;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
     padding: 0vh 4vw 0vh 4vw;
+    background-color: #e2560a;
     
   }
 
 .headerLogo{
     width: 12%;
-    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #0a6fe2;
   }
 
 .headerLogo img{
@@ -102,6 +55,40 @@ html, body {
   }
 
 
+
+
+.signout{
+  height: 2rem;
+  width: auto;
+  display: flex;
+  padding-top: 0.35rem;
+  cursor: pointer;
+  background-color: #c5e20a;
+  }
+
+.sText{
+  height: 1.6rem;
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  font-family: Nunito San;
+  font-size: 16px;
+  background-color: #0a60e2;
+  }
+
+.sIcon{
+  height: 1.4rem;
+  width: auto;
+  display: flex;
+  justify-content: space-around;
+  margin-left: 0.4rem;
+  background-color: #e20a72;
+  }
+
+
+
+
+
 .mainContainer {
     height: auto; /* Restrict body height to viewport */
     width: 100%;
@@ -109,182 +96,3 @@ html, body {
     padding: 0;
 }
 
-
-
-
-
-.section1{
-    height: 100vh;
-    width: 35% ;
-    display: flex;
-    flex-direction: column;
-    /* background-color: rgb(8, 132, 241); */
-  }
-
-  .pageTitle{
-    height: 30%;
-    width: 100% ;
-    padding-top: 12%;
-    /* background-color: rgb(51, 241, 8); */
-  }  
-
-  .text{
-    height: 40%;
-    width: 60% ;
-    justify-self: center;
-    text-align: left;
-    font-size: 48px;
-    font-family: Nunito San;
-    /* background-color: rgb(241, 8, 128); */
-  } 
-
-  
-  
-  
-  .pageImage{
-    height: 70%;
-    width: 100% ;
-    padding: 0;
-    /* background-color: rgb(241, 124, 8); */
-  }
-
-  .pageImage img{
-    height: 100%;
-    width: 100% ;
-  }
-  
-
-
-
-
-
-.section2{
-    height: 100vh;
-    width: 65%;
-    display: flex;
-    background-color: #f9f9f9;
-    padding: 8vh 8vw 8vh 8vw;
-  }
-
-  .loginBox{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 8vh 4vw 12vh 4vw;
-    background-color: #ffffff;
-    
-  }
-/* WELCOME BACK *//* WELCOME BACK *//* WELCOME BACK *//* WELCOME BACK */
-  .lHead{
-    height: 40%;
-    justify-self: center;
-    text-align: center;
-    font-size: 32px;
-    font-family: Nunito San;    
-  }
-
-  /* ENTER YOUR EMAIL AND PASSWORD TO LOGIN *//* ENTER YOUR EMAIL AND PASSWORD TO LOGIN *//* ENTER YOUR EMAIL AND PASSWORD TO LOGIN */
-  .lTag{
-    justify-self: center;
-    text-align: center;
-    font-size: 20px;
-    color: #848484;
-    font-family: Nunito San;    
-  }
-
-
-
-
-  /* THIS CODE IS FOR THE EMAIL SECTION *//* THIS CODE IS FOR THE EMAIL SECTION *//* THIS CODE IS FOR THE EMAIL SECTION *//* THIS CODE IS FOR THE EMAIL SECTION */
-  .eText{
-    justify-self: center;
-    margin-top: 8%;
-    font-size: 24px;
-    font-family: Nunito San;    
-  }
-
-  .eBox{
-    width: 100%;
-    margin-top: 2%;
-    border: 1.6px solid #F5F5F5;
-    border-radius: 4px;
-    color: #848484;
-    font-family: Nunito San;    
-  }
-
-
-  .efield{
-  width: 100%;
-  height: 100%;
-  padding: 12px;
-  border: none; /* Removes the default border */
-  outline: none; /* Prevents outline on focus */
-  border-radius: 4px;
-  font-size: 14px;
-  color: #848484;
-  font-family: 'Nunito Sans', sans-serif;
-  background-color: transparent; /* Optional: keep background transparent */    
-  }
-
-
-
-
-
-
-  /* THIS CODE IS FOR THE PASSWORD SECTION *//* THIS CODE IS FOR THE PASSWORD SECTION *//* THIS CODE IS FOR THE PASSWORD SECTION *//* THIS CODE IS FOR THE PASSWORD SECTION */
-  .pText{
-    justify-self: center;
-    margin-top: 6%;
-    font-size: 24px;
-    font-family: Nunito San;    
-  }
-
-  .pBox{
-    width: 100%;
-    border: 1.6px solid #F5F5F5;
-    margin-top: 2%;
-    border-radius: 4px;
-    font-size: 14px;
-    color: #848484;
-    font-family: Nunito San;    
-  }
-
-
-  .pfield{
-  width: 100%;
-  height: 100%;
-  padding: 12px;
-  border: none; /* Removes the default border */
-  outline: none; /* Prevents outline on focus */
-  border-radius: 4px;
-  font-size: 14px;
-  color: #848484;
-  font-family: 'Nunito Sans', sans-serif;
-  background-color: transparent; /* Optional: keep background transparent */    
-  }
-
-
-
-
-
-
-  /* THIS CODE IS FOR THE LOGIN BUTTON *//* THIS CODE IS FOR THE LOGIN BUTTON *//* THIS CODE IS FOR THE LOGIN BUTTON *//* THIS CODE IS FOR THE LOGIN BUTTON */
-.lButton{
-  width: 100%;
-  padding: 14px;
-  margin-top: 6%;
-  margin-bottom: 1rem;
-  background-color: #096D49; 
-  color: white;
-  border: none;
-  border-radius: 4px;
-  font-size: 20px;
-  text-align: center;
-  cursor: pointer;
-    
-  }
-
-.lButton:hover {
-  background-color: #53a587; /* Color on hover */
-}
