--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     user-select: none;
+    background-color: #F9F9F9;
 }
 
 @font-face {
@@ -11,7 +12,7 @@
 }
 
 .header {
-    height: 80px;
+    height: auto;
     width: 100%;
     background-color: #FFFFFF;
     padding: 1vh 12vh;
@@ -25,10 +26,13 @@
     height: auto;
     width: auto;
     /* border: 1px solid green; */
+    background-color: #FFFFFF;
 }
 
 .logoContain img {
     -webkit-user-drag: none;
+    background-color: #FFFFFF;
+
 }
 
 .bodyContain {
@@ -115,11 +119,11 @@
 }
 
 .addModal {
-    height: 676px;
+    height: auto;
     width: 50%;
     background-color: #FFFFFF;
     border-radius: 4px;
-    margin: 5vw auto;
+    margin: 3vh auto;
     padding: 3vh 4.5vh;
     z-index: 20;
     overflow-y: auto;
@@ -132,6 +136,7 @@
     /* border: 1px solid #d9d9d9; */
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .headText {
@@ -144,6 +149,7 @@
     font-family: Nunito Sans;
     font-size: 32px;
     font-weight: 400;
+    background-color: #FFFFFF;
 }
 
 .closeBox {
@@ -153,12 +159,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FFFFFF;
 }
 
 .closeBox img {
     -webkit-user-drag: none;
     cursor: pointer;
     width: 100%;
+    background-color: #FFFFFF;
 }
 
 .studentInfo {
@@ -166,6 +174,8 @@
     width: 100%;
     /* border: 1px solid blue; */
     margin-top: 1vh;
+    background-color: #FFFFFF;
+
 }
 
 .NameFieldContain {
@@ -193,12 +203,14 @@
     font-weight: 500;
     font-size: 16px;
     user-select: none;
+    background-color: #FFFFFF;
 }
 
 .NameFieldInput {
     height: 100%;
     width: 75%;
     /* border: 1px solid black; */
+    background-color: #FFFFFF;
 }
 
 .NameFieldInput input {
@@ -210,6 +222,7 @@
     font-weight: 400;
     font-size: 16px;
     cursor: default;
+    background-color: #FFFFFF;
 }
 
 .caretdown{
@@ -220,10 +233,12 @@
     align-items: center;
     justify-content: right;
     cursor: pointer;
+    background-color: #FFFFFF;
 }
 
 .caretdown img{
     -webkit-user-drag: none;
+    background-color: #FFFFFF;
 }
 
 /* ------unit dropdown----- */
@@ -254,6 +269,7 @@
     font-family: Nunito Sans;
     font-size: 16px;
     font-weight: 300;
+    background-color: #FFFFFF;
 }
 
 .unitLIst:hover{
@@ -310,6 +326,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0vh 1vh;
+    background-color: #FFFFFF;
 }
 
 .headText2 {
@@ -322,6 +339,7 @@
     font-family: Nunito Sans;
     font-size: 16px;
     font-weight: 400;
+    background-color: #FFFFFF;
 }
 
 .confirmTxt{
@@ -335,6 +353,7 @@
     font-size: 13px;
     font-weight: 300;
     padding: 2vh;
+    background-color: #FFFFFF;
 }
 
 .confirmBtnContain{
@@ -347,6 +366,8 @@
     user-select: none;
     /* gap: 1vh; */
     padding: 0vh 1vh;
+    background-color: #FFFFFF;
+
 }
 
 .cancelBtn{
@@ -360,6 +381,7 @@
     font-family: Nunito Sans;
     font-weight: 300;
     font-size: 14px;
+    background-color: #FFFFFF;
 }
 
 .proceedBtn{
@@ -403,6 +425,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0vh 2vh;
+    background-color: #FFFFFF;
 }
 
 .modalBody{
@@ -414,6 +437,8 @@
     align-items: center;
     justify-content: center;
     gap: 1vw;
+    background-color: #FFFFFF;
+
 }
 
 .successImg{
@@ -423,10 +448,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FFFFFF;
 }
 
 .successImg img{
     -webkit-user-drag: none;
+    background-color: #FFFFFF;
 }
 
 .successTxt{
@@ -440,6 +467,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FFFFFF;
 }
 
 .modalFooter{
@@ -449,6 +477,7 @@
     display: flex;
     justify-content: right;
     padding: 0vh 1vh;
+    background-color: #FFFFFF;
 }
 
 .okayBtn{
@@ -501,6 +530,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .superUnitContain{
@@ -513,6 +543,7 @@
     padding: 0vh 1vh;
     border-radius: 4px;
     cursor: pointer;
+    background-color: #FFFFFF;
 }
 
 .superUnit{
@@ -523,6 +554,7 @@
     font-size: 16px;
     font-weight: 400;
     color: #9A9A9A;
+    background-color: #FFFFFF;
 }
 
 .superUnitDisplay{
@@ -531,6 +563,7 @@
     /* border: 1px solid red; */
     display: flex;
     align-items: center;
+    background-color: #FFFFFF;
 }
 
 .superUnitDisplay input{
@@ -542,6 +575,7 @@
     font-size: 16px;
     font-weight: 300;
     cursor: default;
+    background-color: #FFFFFF;
 }
 
 .superDrop{
@@ -576,6 +610,7 @@
     font-size: 16px;
     font-weight: 300;
     cursor: default;
+    background-color: #FFFFFF;
 }
 
 .superFooter{
@@ -586,6 +621,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0vh 1vh;
+    background-color: #FFFFFF;
 }
 
 .superFooterTxt{
@@ -597,6 +633,7 @@
     color: #848484;
     font-family: Nunito Sans;
     font-size: 15px;
+    background-color: #FFFFFF;
 }
 
 .assignBtn{
@@ -621,7 +658,7 @@
     width: 100%;
     background-color: #096D49;
     border-radius: 4px;
-    margin-top: 2vw;
+    margin-top: 1vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -636,6 +673,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #096D49;
+    
 }
 
 .totesHeadTxt{
@@ -646,6 +685,7 @@
     font-family: Nunito Sans;
     font-size: 20px;
     font-weight: 300;
+    background-color: #096D49;
 }
 
 .totesHeadNum{
@@ -658,6 +698,7 @@
     color: #FFFFFF;
     display: flex;
     align-items: last baseline;
+    background-color: #096D49;
 }
 
 .topology{
@@ -667,17 +708,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #096D49;
 }
 
 .topology img{
     object-fit: cover;
     -webkit-user-drag: none;
+    background-color: #096D49;
+
 }
 
 .totesGender{
     height: 100%;
     width: 30%;
     /* border: 1px solid red; */
+    background-color: #096D49;
     display: flex;
     /* justify-content: space-between; */
 }
@@ -690,6 +735,9 @@
     align-items: center;
     /* justify-content: space-between; */
     gap: 0.5vh;
+    background-color: #096D49;
+
+
 }
 
 .maleImg{
@@ -699,12 +747,14 @@
     display: flex;
     /* align-items: center; */
     justify-content: center;
+    background-color: #096D49;
 }
 
 .maleImg img{
     -webkit-user-drag: none;
     height: 50px;
     width: 51px;
+    background-color: #096D49;
 
 }
 
@@ -724,6 +774,7 @@
     display: flex;
     align-items: last baseline;
     /* border: 1px solid black; */
+    background-color: #096D49;
 }
 
 .maleNum{
@@ -734,6 +785,7 @@
     font-family: Nunito Sans;
     font-size: 32px;
     font-weight: 600;
+    background-color: #096D49;
 }
 
 
@@ -744,16 +796,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #096D49;
+
 }
 /* ----------End of hero section----- */
 
 .majorSect{
-    height: 480px;
+    height: 470px;
     width: 100%;
     /* border: 1px solid red; */
-    margin-top: 3vw;
+    margin-top: 1vw;
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -763,12 +816,11 @@
     /* border: 1px solid purple; */
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 
 .topMore{
-    height: 160px;
+    height: 28%;
     width: 100%;
     /* border: 1px solid brown; */
     display: flex;
@@ -790,6 +842,7 @@
     width: 70%;
     /* border: 1px solid blue; */
     padding: 0.5vh;
+    background-color: #FFFFFF;
 }
 
 .superHead{
@@ -799,10 +852,12 @@
     font-size: 24px;
     font-weight: 400;
     /* border: 1px solid black; */
+    background-color: #FFFFFF;
+
 }
 
 .totesSuper{
-    height: 73px;
+    height: auto;
     width: 100%;
     font-family: Nunito Sans;
     font-size: 36px;
@@ -811,6 +866,7 @@
     color: #096D49;
     display: flex;
     align-items: center;
+    background-color: #FFFFFF;
 }
 
 .teacherContain{
@@ -820,6 +876,7 @@
     padding: 1vh;
     display: flex;
     justify-content: center;
+    background-color: #FFFFFF;
 }
 
 .radiusContain{
@@ -853,6 +910,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #FFFFFF;
+
 }
 
 .activeBarContain{
@@ -861,6 +920,7 @@
     /* border: 1px solid green; */
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .activeBar{
@@ -887,6 +947,7 @@
     font-family: Nunito Sans;
     font-size: 16px;
     font-weight: 500;
+    background-color: #FFFFFF;
 }
 
 .pastBarContain{
@@ -895,6 +956,8 @@
     /* border: 1px solid green; */
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFF;
+
 }
 
 .pastBar{
@@ -921,14 +984,17 @@
     font-family: Nunito Sans;
     font-size: 16px;
     font-weight: 500;
+    background-color: #FFFFFF;
+
 }
 
 .bottomMore{
-    height: 300px;
+    height: 65%;
     width: 100%;
     /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
+    margin-top: 2vh;
 }
 
 .unitsBarContain{
@@ -950,6 +1016,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-top: 1vh;
+    background-color: #FFFFFF;
 }
 
 .units{
@@ -958,6 +1025,7 @@
     /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .totesUnit{
@@ -1002,6 +1070,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .supervisor{
@@ -1010,6 +1079,7 @@
     /* border: 1px solid blue; */
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .superPhoto{
@@ -1036,6 +1106,7 @@
     font-family: Nunito Sans;
     font-size: 16px;
     font-weight: 300;
+    background-color: #FFFFFF;
 }
 
 .supervisorUnit{
@@ -1049,10 +1120,11 @@
     font-size: 16px;
     font-weight: 300;
     color: #848484;
+    background-color: #FFFFFF;
 }
 
 .lessMajor{
-    height: 100%;
+    height: 96.5%;
     width: 28%;
     /* border: 1px solid blue; */
     background-color: #FFFFFF;
@@ -1069,6 +1141,7 @@
     /* background-color: blue; */
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFF;
 }
 
 .studentHead{
@@ -1081,6 +1154,7 @@
     font-weight: 400;
     display: flex;
     align-items: center;
+    background-color: #FFFFFF;
 }
 
 .viewBtn{
@@ -1097,6 +1171,7 @@
     font-weight: 500;
     color: #096D49;
     cursor: pointer;
+    background-color: #FFFFFF;
 }
 
 .lessBody{
@@ -1106,6 +1181,7 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    background-color: #FFFFFF;
 }
 
 .studentsList{
@@ -1115,6 +1191,7 @@
     display: flex;
     padding: 0vh 1vh;
     gap: 1vh;
+    background-color: #FFFFFF;
 }
 
 .studPhoto{
@@ -1138,6 +1215,7 @@
     /* border: 1px solid pink; */
     display: flex;
     flex-direction: column;
+    background-color: #FFFFFF;
 }
 
 .nameBox{
@@ -1147,6 +1225,7 @@
     font-family: Nunito Sans;
     font-size: 16px;
     font-weight: 300;
+    background-color: #FFFFFF;
 }
 
 .unitBox{
@@ -1157,4 +1236,5 @@
     font-size: 14px;
     font-weight: 200;
     color: #848484;
+    background-color: #FFFFFF;
 }
