--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -660,9 +660,9 @@
     border-radius: 4px;
     margin-top: 1vw;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
-    padding: 0vh 2vw 0vh 2vw;
+    padding: 0vh 0vw 0vh 2vw;
 }
 
 .toteStudent{
@@ -703,19 +703,18 @@
 
 .topology{
     height: 100%;
-    width: 50%;
+    width: 54%;
     /* border: 1px solid white; */
     display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: #096D49;
 }
 
 .topology img{
-    object-fit: cover;
-    -webkit-user-drag: none;
+    width: 100%;
+    height: 100%;
+    /* -webkit-user-drag: none; */
     background-color: #096D49;
-
+    /* border: 1px solid white; */
 }
 
 .totesGender{
@@ -736,8 +735,6 @@
     /* justify-content: space-between; */
     gap: 0.5vh;
     background-color: #096D49;
-
-
 }
 
 .maleImg{
@@ -762,6 +759,7 @@
     height: auto;
     width: auto;
     /* border: 1px solid yellow; */
+    background-color: #096D49;
 }
 
 .maleTxt{
