CSS edits for backend

--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -1159,16 +1159,15 @@
     padding: 2vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .lessHead{
     height: 10%;
     width: 100%;
-    /* background-color: blue; */
     display: flex;
     justify-content: space-between;
     background-color: #FFFFFF;
+    /* border: 1px solid blue; */
 }
 
 .studentHead{
@@ -1206,21 +1205,22 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-direction: column;
     background-color: #FFFFFF;
+    /* border: 1px solid green; */
+    
+
 }
 
 .studentsList{
     width: 100%;
     display: flex;
-    flex-direction: column; /* stack students vertically */
     gap: 1vh;
     padding: 0vh 1vh;
     background-color: #FFFFFF;
-    max-height: 100%; /* Optional: controls scroll if needed */
-    overflow-y: auto; /* Optional: adds scroll if content overflows */
-    /* height: 45px; */
+    /* border: 1px solid red; */
+    margin-top: 1vh;
 }
 
 .studPhoto{
