--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -1213,19 +1213,18 @@
     display: flex;
     flex-direction: column;
     background-color: #FFFFFF;
-    /* border: 1px solid green; */
-    
-
+    border: 1px solid green;
 }
 
 .studentsList {
     width: 100%;
+    height: 100%;
     display: flex;
     gap: 1vh;
     background-color: #FFFFFF;
     /* border: 1px solid red; */
     margin-top: 1vh;
-    /* font-family: Nunito Sans; */
+    font-family: Nunito Sans;
     font-size: 16px;
 }
 
