Upload picture edit because uploaded picture was skewing

--- a/frontend/HR VIEW/styles/hrstudentProfile.css
+++ b/frontend/HR VIEW/styles/hrstudentProfile.css
@@ -142,7 +142,7 @@
 .photoBox img{
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: contain; 
     border-radius: 4px;
     -webkit-user-drag: none;
 }
