--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -1213,7 +1213,7 @@
     display: flex;
     flex-direction: column;
     background-color: #FFFFFF;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
 
 .studentsList {
