--- a/frontend/USER VIEW/styles/studentProfile.css
+++ b/frontend/USER VIEW/styles/studentProfile.css
@@ -127,7 +127,7 @@
 .photoBox img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 4px;
 }
 
