--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -1340,7 +1340,7 @@
 .studentName {
     font-size: 16px;
     font-weight: 300;
-    color: black;
+    /* color: black; */
     background-color: #FFFFFF;
 }
 
