--- a/frontend/HR VIEW/styles/hrstudentProfile.css
+++ b/frontend/HR VIEW/styles/hrstudentProfile.css
@@ -251,44 +251,80 @@
     font-family: Nunito Sans;
     font-weight: 300;
     font-size: 20px;
-    color: #797979;
+    color: #616161;
 }
 
 /* ------Info Section------- */
 
 .majorContainer{
-    height: 435px;
+    height: 496px;
     width: 100%;
     /* border: 1px solid black; */
     margin: 4vw  0vh 0vh 0vh;
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     user-select: none;
+    align-items:flex-end;
+
 }
 
 .personInfo{
-    height: 100%;
-    width: 49%;
+    height: 90%;
+    width: 100%;
     background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
-    padding: 3vh 0vh;
+    padding: 3vh 2vh;
+}
+
+.titleEdit{
+    height: 34px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2vh;
 }
 
 .infoTitle{
-    height: 33px;
-    width: 95%;
+    height: 100%;
+    width: auto;
     /* border: 1px solid blue; */
     font-size: 24px;
     font-family: Nunito Sans;
     font-weight: 400;
 }
 
+.editBio{
+    height: 100%;
+    width: 7%;
+    /* border: 1px solid blue; */
+    font-size: 14px;
+    font-family: Nunito Sans;
+    font-weight: 400;
+    background-color: #096D49;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.infoBodyContain{
+    height: 94px;
+    width: 100%;
+    /* border: 1px solid green; */
+    margin-bottom: 2vh;
+    display: flex;
+    justify-content: space-between;
+}
+
 .infoBody{
     height: 94px;
-    width: 95%;
+    width: 49%;
     /* border: 1px solid purple; */
     display: flex;
     justify-content: space-between;
@@ -302,6 +338,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* border: 1px solid red; */
 }
 
 .infoLabel{
@@ -324,4 +361,637 @@
     font-size: 24px;
     font-family: Nunito Sans;
     font-weight: 600;
+}
+
+/* ---------Add student Modal------ */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    display: none;
+    z-index: 10;
+}
+
+.addModal {
+    height: auto;
+    width: 50%;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+    margin: 3vh auto;
+    padding: 3vh 4.5vh;
+    z-index: 20;
+    overflow-y: auto;
+    scrollbar-width: none;
+}
+
+.modalHead {
+    height: 60px;
+    width: 100%;
+    /* border: 1px solid #d9d9d9; */
+    display: flex;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+}
+
+.headText {
+    height: auto;
+    width: auto;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    user-select: none;
+    font-family: Nunito Sans;
+    font-size: 32px;
+    font-weight: 400;
+    background-color: #FFFFFF;
+}
+
+.closeBox {
+    height: auto;
+    width: 5%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.closeBox img {
+    -webkit-user-drag: none;
+    cursor: pointer;
+    width: 100%;
+    background-color: #FFFFFF;
+}
+
+.studentInfo {
+    height: auto;
+    width: 100%;
+    /* border: 1px solid blue; */
+    margin-top: 1vh;
+    background-color: #FFFFFF;
+
+}
+
+.NameFieldContain {
+    height: 48px;
+    width: 100%;
+    border: 1px solid #F5F5F5;
+    border-radius: 4px;
+    display: flex;
+    background-color: #FFFFFF;
+    margin-top: 1vh;
+    padding-left: 1vh;
+    gap: 1vh;
+    position: relative;
+}
+
+.NameFieldText {
+    height: 100%;
+    width: auto;
+    /* border: 1px solid purple; */
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    color: #9A9A9A;
+    font-family: Nunito Sans;
+    font-weight: 500;
+    font-size: 16px;
+    user-select: none;
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput {
+    height: 100%;
+    width: 75%;
+    /* border: 1px solid black; */
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-family: Nunito Sans;
+    font-weight: 400;
+    font-size: 16px;
+    cursor: default;
+    background-color: #FFFFFF;
+}
+
+.levelContain {
+    height: 100%;
+    width: 100%;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+}
+
+.NameFieldContain2 {
+    height: 48px;
+    width: 70%;
+    border: 1px solid #F5F5F5;
+    border-radius: 4px;
+    display: flex;
+    background-color: #FFFFFF;
+    margin-top: 1vh;
+    padding-left: 1vh;
+    gap: 1vh;
+}
+
+.NameFieldText2 {
+    height: 100%;
+    width: auto;
+    /* border: 1px solid purple; */
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    color: #9A9A9A;
+    font-family: Nunito Sans;
+    font-weight: 500;
+    font-size: 16px;
+    user-select: none;
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput2 {
+    height: 100%;
+    width: 75%;
+    /* border: 1px solid black; */
+    background-color: #FFFFFF;
+}
+
+.NameFieldInput2 input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-family: Nunito Sans;
+    font-weight: 400;
+    font-size: 16px;
+    cursor: default;
+    background-color: #FFFFFF;
+}
+
+.genderGroup {
+    height: 48px;
+    width: 29%;
+    border: 1px solid #F5F5F5;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    background-color: #FFFFFF;
+    margin-top: 1vh;
+    padding-left: 1vh;
+    padding-right: 1vh;
+    gap: 1.5vh;
+}
+
+.customRadio {
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-family: Nunito Sans;
+    font-size: 16px;
+    cursor: pointer;
+    user-select: none;
+    background-color: #FFFFFF;
+}
+
+.customRadio input[type="radio"] {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.radioCircle {
+    width: 26px;
+    height: 26px;
+    border: 2px solid #096D49;
+    /* Green border */
+    border-radius: 50%;
+    margin-right: 8px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.radioCircle::after {
+    content: "";
+    width: 12px;
+    height: 12px;
+    background-color: #096D49;
+    /* Green inner dot */
+    border-radius: 50%;
+    display: none;
+}
+
+.customRadio input[type="radio"]:checked+.radioCircle::after {
+    display: block;
+}
+
+.caretdown {
+    height: 100%;
+    width: 16%;
+    /* border: 1px solid brown; */
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    cursor: pointer;
+    background-color: #FFFFFF;
+}
+
+.caretdown img {
+    -webkit-user-drag: none;
+    background-color: #FFFFFF;
+}
+
+/* ------unit dropdown----- */
+
+.unitDrop {
+    height: 225px;
+    width: 100%;
+    background-color: #FFFFFF;
+    /* border: 1px solid salmon; */
+    position: absolute;
+    z-index: 2;
+    top: 55px;
+    right: 0;
+    display: none;
+    /* display: flex; */
+    flex-direction: column;
+    align-items: center;
+}
+
+.unitLIst {
+    height: 45px;
+    width: 100%;
+    border-bottom: 1px solid #F5F5F5;
+    display: flex;
+    align-items: center;
+    padding-left: 1vw;
+    user-select: none;
+    font-family: Nunito Sans;
+    font-size: 16px;
+    font-weight: 300;
+    background-color: #FFFFFF;
+}
+
+.unitLIst:hover {
+    background-color: #F5F5F5;
+}
+
+.saveBtn {
+    height: 48px;
+    width: 100%;
+    background-color: #096D49;
+    border-radius: 4px;
+    margin-top: 1vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    font-family: Nunito Sans;
+    font-weight: 300;
+    font-size: 16px;
+    user-select: none;
+    cursor: pointer;
+}
+
+.saveBtn:hover {
+    background-color: #6BA792;
+}
+
+/* -------End of modal-------- */
+
+/* ------------Success modal--- */
+.overlay3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    display: none;
+    z-index: 10;
+}
+
+.successModal {
+    height: 210px;
+    width: 30%;
+    background-color: #FFFFFF;
+    margin: 20vw auto;
+    border-radius: 4px;
+}
+
+.modalHead3 {
+    height: 40px;
+    width: 100%;
+    border-bottom: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: space-between;
+    padding: 0vh 2vh;
+    background-color: #FFFFFF;
+}
+
+.modalBody {
+    height: 128px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1vw;
+    background-color: #FFFFFF;
+
+}
+
+.successImg {
+    height: 70px;
+    width: 20%;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.successImg img {
+    -webkit-user-drag: none;
+    background-color: #FFFFFF;
+}
+
+.successTxt {
+    height: 24px;
+    width: 100%;
+    /* border: 1px solid purple; */
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-weight: 400;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.modalFooter {
+    height: 40px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    justify-content: right;
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+}
+
+.okayBtn {
+    height: 34px;
+    width: 20%;
+    background-color: #096D49;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.okayBtn:hover {
+    background-color: #aac8be;
+}
+/* ------End of modals */
+
+.deactivateBtn{
+    height: 8%;
+    width: 7%;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F44336;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    user-select: none;
+    color: #FFFFFF;
+    border-radius: 4px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.deactivateBtn:hover{
+    background-color: #F44336B2;
+}
+
+/* Mini Modal */
+
+.overlay2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    display: none;
+    z-index: 10;
+}
+
+.confirmModal {
+    height: 171px;
+    width: 30%;
+    background-color: #FFFFFF;
+    margin: 20vw auto;
+    border-radius: 4px;
+}
+
+.modalHead2 {
+    height: 38px;
+    width: 100%;
+    border-bottom: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: space-between;
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+}
+
+.headText2 {
+    height: auto;
+    width: auto;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    user-select: none;
+    font-family: Nunito Sans;
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #FFFFFF;
+}
+
+.confirmTxt {
+    height: 87px;
+    width: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    /* align-items: center; */
+    user-select: none;
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 2vh;
+    background-color: #FFFFFF;
+}
+
+.confirmBtnContain {
+    height: 44px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    /* align-items: center; */
+    justify-content: right;
+    user-select: none;
+    /* gap: 1vh; */
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+
+}
+
+.cancelBtn {
+    height: 32px;
+    width: 20%;
+    /* border: 1px solid green; */
+    color: #096D49;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-weight: 300;
+    font-size: 14px;
+    background-color: #FFFFFF;
+}
+
+.proceedBtn {
+    height: 34px;
+    width: 30%;
+    background-color: #096D49;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-weight: 200;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+/* ------------Success modal--- */
+.overlay4 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    display: none;
+    z-index: 10;
+}
+
+.successModal2 {
+    height: 210px;
+    width: 30%;
+    background-color: #FFFFFF;
+    margin: 20vw auto;
+    border-radius: 4px;
+}
+
+.modalHead4 {
+    height: 40px;
+    width: 100%;
+    border-bottom: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: space-between;
+    padding: 0vh 2vh;
+    background-color: #FFFFFF;
+}
+
+.modalBody {
+    height: 128px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1vw;
+    background-color: #FFFFFF;
+
+}
+
+.successImg {
+    height: 70px;
+    width: 20%;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.successImg img {
+    -webkit-user-drag: none;
+    background-color: #FFFFFF;
+}
+
+.successTxt {
+    height: 24px;
+    width: 100%;
+    /* border: 1px solid purple; */
+    font-family: Nunito Sans;
+    font-size: 13px;
+    font-weight: 400;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+}
+
+.modalFooter {
+    height: 40px;
+    width: 100%;
+    /* border: 1px solid blue; */
+    display: flex;
+    justify-content: right;
+    padding: 0vh 1vh;
+    background-color: #FFFFFF;
+}
+
+.okayBtn2 {
+    height: 34px;
+    width: 20%;
+    background-color: #096D49;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-size: 14px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.okayBtn2:hover {
+    background-color: #aac8be;
 }
